--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -24,7 +24,7 @@
 
       <ion-col size="4">
         <div class="icon-wrapper">
-          <ion-button fill="clear" class="icon-button agua"> 
+          <ion-button fill="clear" class="icon-button agua" routerLink="/agua"> 
             <ion-icon name="water"></ion-icon>
           </ion-button>
           <div class="icon-label" style="font-weight: bold;">Agua</div>
@@ -111,7 +111,7 @@
 
       <ion-col size="4">
         <div class="icon-wrapper">
-          <ion-button fill="clear" class="icon-button citas-medicas"> 
+          <ion-button fill="clear" class="icon-button citas-medicas" routerLink="/citas"> 
             <ion-icon name="calendar"></ion-icon>
           </ion-button>
           <div class="icon-label" style="font-weight: bold;">Citas Médicas</div>
