--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -33,7 +33,7 @@
 
       <ion-col size="4">
         <div class="icon-wrapper">
-          <ion-button fill="clear" class="icon-button cafe"> 
+          <ion-button fill="clear" class="icon-button cafe" routerLink="/cafeina"> 
             <ion-icon name="cafe-outline"></ion-icon>
           </ion-button>
           <div class="icon-label" style="font-weight: bold;">Cafeína</div>
@@ -44,7 +44,7 @@
     <ion-row>
       <ion-col size="4">
         <div class="icon-wrapper">
-          <ion-button fill="clear" class="icon-button entrenamiento"> 
+          <ion-button fill="clear" class="icon-button entrenamiento" routerLink="/entrenamientos"> 
             <ion-icon name="barbell"></ion-icon>
           </ion-button>
           <div class="icon-label" style="font-weight: bold;">Entrenamientos</div>
@@ -53,7 +53,7 @@
 
       <ion-col size="4">
         <div class="icon-wrapper">
-          <ion-button fill="clear" class="icon-button estado-animo"> 
+          <ion-button fill="clear" class="icon-button estado-animo" routerLink="/estado"> 
             <ion-icon name="happy"></ion-icon>
           </ion-button>
           <div class="icon-label" style="font-weight: bold;">Estado de Ánimo</div>
@@ -62,7 +62,7 @@
 
       <ion-col size="4">
         <div class="icon-wrapper">
-          <ion-button fill="clear" class="icon-button ciclo-menstrual"> 
+          <ion-button fill="clear" class="icon-button ciclo-menstrual" routerLink="/ciclo"> 
             <ion-icon name="sync"></ion-icon>
           </ion-button>
           <div class="icon-label" style="font-weight: bold;">Ciclo Menstrual</div>
@@ -73,7 +73,7 @@
     <ion-row>
       <ion-col size="4">
         <div class="icon-wrapper">
-          <ion-button fill="clear" class="icon-button pasos"> 
+          <ion-button fill="clear" class="icon-button pasos" routerLink="/pasos"> 
             <ion-icon name="walk"></ion-icon>
           </ion-button>
           <div class="icon-label" style="font-weight: bold;">Pasos</div>
@@ -82,7 +82,7 @@
 
       <ion-col size="4">
         <div class="icon-wrapper">
-          <ion-button fill="clear" class="icon-button balanza">
+          <ion-button fill="clear" class="icon-button balanza" routerLink="/peso">
             <i class="material-icons">scale</i>
           </ion-button>
           <div class="icon-label" style="font-weight: bold;">Peso</div>
@@ -91,7 +91,7 @@
 
       <ion-col size="4">
         <div class="icon-wrapper">
-          <ion-button fill="clear" class="icon-button estatura"> 
+          <ion-button fill="clear" class="icon-button estatura" routerLink="/estatura"> 
             <i class="material-icons">square_foot</i>
           </ion-button>
           <div class="icon-label" style="font-weight: bold;">Estatura</div>
@@ -102,7 +102,7 @@
     <ion-row>
       <ion-col size="4">
         <div class="icon-wrapper">
-          <ion-button fill="clear" class="icon-button sueño"> 
+          <ion-button fill="clear" class="icon-button sueño" routerLink="/sueno"> 
             <ion-icon name="moon"></ion-icon>
           </ion-button>
           <div class="icon-label" style="font-weight: bold;">Sueño</div>
@@ -120,7 +120,7 @@
 
       <ion-col size="4">
         <div class="icon-wrapper">
-          <ion-button fill="clear" class="icon-button medicamentos"> 
+          <ion-button fill="clear" class="icon-button medicamentos" routerLink="/medicaciones"> 
             <i class="material-icons">medication</i> 
           </ion-button>
           <div class="icon-label" style="font-weight: bold;">Medicamentos</div>
